[gd_scene load_steps=6 format=3 uid="uid://d2dnyvn705mw3"]

[ext_resource type="Script" path="res://scenes/fighter_base/fighter_base.gd" id="1_gyece"]
[ext_resource type="Texture2D" uid="uid://dnwhs0cyjsi1s" path="res://assets/fleet_1/fleet_1/Base/PNGs/fighter.png" id="2_1pg6n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_un2a3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hoocd"]
radius = 926.732

[sub_resource type="CircleShape2D" id="CircleShape2D_pmb74"]
radius = 34.1321

[node name="Fighter" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_gyece")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_1pg6n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_un2a3")

[node name="Detection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_hoocd")

[node name="LOS" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LOS"]
shape = SubResource("CircleShape2D_pmb74")

[node name="StateLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.5
offset_top = -26.5
offset_right = 12.5
offset_bottom = -9.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "state"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProjectileSpawner" type="Marker2D" parent="."]
position = Vector2(15, 0)

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
[connection signal="area_entered" from="LOS" to="." method="_on_los_area_entered"]
[connection signal="area_exited" from="LOS" to="." method="_on_los_area_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
